Fix overflow bug

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -37,6 +37,7 @@
 }
 
 .app-bar .select2 {
+	display: block;
 	margin: 6px;
 	width: 100%;
 	max-width: 250px;
@@ -82,6 +83,8 @@
 	width: 100%;
 	max-width: 540px;
 	height: 100%;
+	box-sizing: border-box;
+	padding: 6px;
 }
 
 .text-overflow {
